refactor: :truck: moving files 👍

--- a/2021/2021.md
+++ b/2021/2021.md
@@ -1,3 +1,5 @@
+This 2021 folder is an archive of my first attempt at it, still fun to keep around :)
+
 # 🎄 Advent of Code - 2021
 
 First year of Advent of Code, all challenges will be done with JS.
