feat: :sparkles: Lights go brrr

--- a/src/2015/2015.md
+++ b/src/2015/2015.md
@@ -1,3 +1,13 @@
 Writing this it is october 2022.
 
-**Day 1:** Nice warm-up
+**Day 01:** Nice warm-up
+
+**Day 02:** We do a little maths
+
+**Day 03:** Copy pasting solution 1 bb
+
+**Day 04:** Brute 👏 Force
+
+**Day 05:** Yessss, RegEx my homie is back!!!
+
+**Day 06:** I should learn to read before entering my solution 😓
