feat: :sparkles: Solved day 7 :D, quite fun!

--- a/src/2015/2015.md
+++ b/src/2015/2015.md
@@ -11,3 +11,5 @@ Writing this it is october 2022.
 **Day 05:** Yessss, RegEx my homie is back!!!
 
 **Day 06:** I should learn to read before entering my solution 😓
+
+**Day 07:** First real challenge, quite enjoyable :D
