feat: :sparkles: Solved day 8, not too bad

--- a/src/2015/2015.md
+++ b/src/2015/2015.md
@@ -13,3 +13,5 @@ Writing this it is october 2022.
 **Day 06:** I should learn to read before entering my solution 😓
 
 **Day 07:** First real challenge, quite enjoyable :D
+
+**day 08:** Hex code representation? More like "6"
