feat: :sparkles: Solved day 9 (finally)

--- a/src/2015/2015.md
+++ b/src/2015/2015.md
@@ -14,4 +14,6 @@ Writing this it is october 2022.
 
 **Day 07:** First real challenge, quite enjoyable :D
 
-**day 08:** Hex code representation? More like "6"
+**Day 08:** Hex code representation? More like "6"
+
+**Day 09:** I didn't ~~steal~~ write a Dijkstra algo for this day nooo. Couldn't even use it because its TSP :|  Ended up brute forcing it lol
