--- a/src/2015/2015.md
+++ b/src/2015/2015.md
@@ -17,3 +17,5 @@ Writing this it is october 2022.
 **Day 08:** Hex code representation? More like "6"
 
 **Day 09:** I didn't ~~steal~~ write a Dijkstra algo for this day nooo. Couldn't even use it because its TSP :|  Ended up brute forcing it lol
+
+**Day 10:** Fuck performance, ill wait those 2 seconds for my golden star lol. (recycling code FTW)
