feat: :sparkles: day 11 done :D

--- a/src/2015/2015.md
+++ b/src/2015/2015.md
@@ -19,3 +19,5 @@ Writing this it is october 2022.
 **Day 09:** I didn't ~~steal~~ write a Dijkstra algo for this day nooo. Couldn't even use it because its TSP :|  Ended up brute forcing it lol
 
 **Day 10:** Fuck performance, ill wait those 2 seconds for my golden star lol. (recycling code FTW)
+
+**Day 11:** Trust me, writing the regex was faster than thinking of an algorithm :L (also code recycling FTW)
