feat: :sparkles: Day 12 :D

--- a/src/2015/2015.md
+++ b/src/2015/2015.md
@@ -21,3 +21,5 @@ Writing this it is october 2022.
 **Day 10:** Fuck performance, ill wait those 2 seconds for my golden star lol. (recycling code FTW)
 
 **Day 11:** Trust me, writing the regex was faster than thinking of an algorithm :L (also code recycling FTW)
+
+**Day 12:** Okay most of my time was spent trying to make a RegEx for part 2 😓. As you can see: I failed.
