--- a/src/2015/2015.md
+++ b/src/2015/2015.md
@@ -25,3 +25,5 @@ Writing this it is october 2022.
 **Day 12:** Okay most of my time was spent trying to make a RegEx for part 2 😓. As you can see: I failed.
 
 **Day 13:** Day 9 again :|
+
+**Day 14:** Part 1 was a nasty trick that was supposed to backfire on me for part 2. Jokes on the creator, I still did it with maths >:D
