feat: :sparkles: Day 16 speedrun

--- a/src/2015/2015.md
+++ b/src/2015/2015.md
@@ -29,3 +29,5 @@ Writing this it is october 2022.
 **Day 14:** Part 1 was a nasty trick that was supposed to backfire on me for part 2. Jokes on the creator, I still did it with maths >:D
 
 **Day 15:** Ashamed of this one.
+
+**Day 16:** This one was pretty easy, both parts :)
