feat: :sparkles: Day 17, fun challenge :D

--- a/src/2015/2015.md
+++ b/src/2015/2015.md
@@ -31,3 +31,5 @@ Writing this it is october 2022.
 **Day 15:** Ashamed of this one.
 
 **Day 16:** This one was pretty easy, both parts :)
+
+**Day 17:** Liked my solution for this one, am sure it can be improved upon a lot
