docs: :memo: Updated readmes

--- a/src/2015/2015.md
+++ b/src/2015/2015.md
@@ -1,35 +1,37 @@
-Writing this it is october 2022.
+# My thoughts on each day
 
-**Day 01:** Nice warm-up
+Writing this it is october 2022, im solving this in october because i'm kinda bored and wanna warm up my programming skills for december 2022.
 
-**Day 02:** We do a little maths
+- **Day 01:** Nice warm-up
 
-**Day 03:** Copy pasting solution 1 bb
+- **Day 02:** We do a little maths
 
-**Day 04:** Brute 👏 Force
+- **Day 03:** Copy pasting solution 1 bb
 
-**Day 05:** Yessss, RegEx my homie is back!!!
+- **Day 04:** Brute 👏 Force
 
-**Day 06:** I should learn to read before entering my solution 😓
+- **Day 05:** Yessss, RegEx my homie is back!!!
 
-**Day 07:** First real challenge, quite enjoyable :D
+- **Day 06:** I should learn to read before entering my solution 😓
 
-**Day 08:** Hex code representation? More like "6"
+- **Day 07:** First real challenge, quite enjoyable :D
 
-**Day 09:** I didn't ~~steal~~ write a Dijkstra algo for this day nooo. Couldn't even use it because its TSP :|  Ended up brute forcing it lol
+- **Day 08:** Hex code representation? More like "6"
 
-**Day 10:** Fuck performance, ill wait those 2 seconds for my golden star lol. (recycling code FTW)
+- **Day 09:** I didn't ~~steal~~ write a Dijkstra algo for this day nooo. Couldn't even use it because its TSP :|  Ended up brute forcing it lol
 
-**Day 11:** Trust me, writing the regex was faster than thinking of an algorithm :L (also code recycling FTW)
+- **Day 10:** Fuck performance, ill wait those 2 seconds for my golden star lol. (recycling code FTW)
 
-**Day 12:** Okay most of my time was spent trying to make a RegEx for part 2 😓. As you can see: I failed.
+- **Day 11:** Trust me, writing the regex was faster than thinking of an algorithm :L (also code recycling FTW)
 
-**Day 13:** Day 9 again :|
+- **Day 12:** Okay most of my time was spent trying to make a RegEx for part 2 😓. As you can see: I failed.
 
-**Day 14:** Part 1 was a nasty trick that was supposed to backfire on me for part 2. Jokes on the creator, I still did it with maths >:D
+- **Day 13:** Day 9 again :|
 
-**Day 15:** Ashamed of this one.
+- **Day 14:** Part 1 was a nasty trick that was supposed to backfire on me for part 2. Jokes on the creator, I still did it with maths >:D
 
-**Day 16:** This one was pretty easy, both parts :)
+- **Day 15:** Ashamed of this one.
 
-**Day 17:** Liked my solution for this one, am sure it can be improved upon a lot
+- **Day 16:** This one was pretty easy, both parts :)
+
+- **Day 17:** Liked my solution for this one, am sure it can be improved upon a lot
