--- a/src/2015/2015.md
+++ b/src/2015/2015.md
@@ -37,3 +37,5 @@ Writing this it is october 2022, im solving this in october because i'm kinda bo
 - **Day 17:** Liked my solution for this one, am sure it can be improved upon a lot
 
 - **Day 18:** Conways game of life goes brrr. I didn't enter the wrong answer 4 times because I forgot to change the amount of loops from test to real. I would never make such a stupid mistake noooooooo
+
+- **Day 19:** Part 1 was easy, part 2 took some thinking but I ended up getting it first try! My chemistry teacher doesn't agree with the molecule though
