feat: :sparkles: Solved day 20
What did it cost? Several hours of my life :)

--- a/src/2015/2015.md
+++ b/src/2015/2015.md
@@ -39,3 +39,5 @@ Writing this it is october 2022, im solving this in october because i'm kinda bo
 - **Day 18:** Conways game of life goes brrr. I didn't enter the wrong answer 4 times because I forgot to change the amount of loops from test to real. I would never make such a stupid mistake noooooooo
 
 - **Day 19:** Part 1 was easy, part 2 took some thinking but I ended up getting it first try! My chemistry teacher doesn't agree with the molecule though
+
+- **Day 20:** Part 1: doable. Part 2: help (Also thx [`@de-grote`](https://github.com/de-grote/) for having more than 2 braincells). By ~~doing~~ stealing fancy maths, I brought down execution time from 7 minutes down to >2 seconds.
