feat: :sparkles: Suck it Chris

--- a/src/2015/2015.md
+++ b/src/2015/2015.md
@@ -41,3 +41,5 @@ Writing this it is october 2022, im solving this in october because i'm kinda bo
 - **Day 19:** Part 1 was easy, part 2 took some thinking but I ended up getting it first try! My chemistry teacher doesn't agree with the molecule though
 
 - **Day 20:** Part 1: doable. Part 2: help (Also thx [`@de-grote`](https://github.com/de-grote/) for having more than 2 braincells). By ~~doing~~ stealing fancy maths, I brought down execution time from 7 minutes down to >2 seconds.
+
+- **Day 21:** Part 1 was doable. It took me longest trying to figure out how to get the ring combinations. Part 2 put me through living hell because I had a typo in the store. I had the `Armour +3` ring set to `+2`. A redditor ended up pointing it out to me, thanks `u/semi225599`! 
