--- a/src/2015/2015.md
+++ b/src/2015/2015.md
@@ -43,3 +43,5 @@ Writing this it is october 2022, im solving this in october because i'm kinda bo
 - **Day 20:** Part 1: doable. Part 2: help (Also thx [`@de-grote`](https://github.com/de-grote/) for having more than 2 braincells). By ~~doing~~ stealing fancy maths, I brought down execution time from 7 minutes down to >2 seconds.
 
 - **Day 21:** Part 1 was doable. It took me longest trying to figure out how to get the ring combinations. Part 2 put me through living hell because I had a typo in the store. I had the `Armour +3` ring set to `+2`. A redditor ended up pointing it out to me, thanks `u/semi225599`! 
+
+- **Day 23:** Depending on when you are reading this, you may notice that day 22 is not here. That is because I got fed up with it and decided to move on. Day 23 was actually quite easy, part 2 wasn't even a challenge.
