--- a/src/2022/2022.md
+++ b/src/2022/2022.md
@@ -3,3 +3,5 @@
 - **Day 01:** Array modifiers go brrr
 
 - **Day 02:** Not that happy with part 1, but this day I actually tried to get leaderboard. Bad choice if you manually have to get and enter everything 😅
+
+- **Day 03:** Was pretty slow today because I wanted to do the entirety of part 1 using only array modifiers (and I succeeded). I enjoy days that let me use RegEx, even though it is slow it's a fun puzzle.
