feat: :sparkles: day 4 (:

--- a/src/2022/2022.md
+++ b/src/2022/2022.md
@@ -5,3 +5,5 @@
 - **Day 02:** Not that happy with part 1, but this day I actually tried to get leaderboard. Bad choice if you manually have to get and enter everything 😅
 
 - **Day 03:** Was pretty slow today because I wanted to do the entirety of part 1 using only array modifiers (and I succeeded). I enjoy days that let me use RegEx, even though it is slow it's a fun puzzle.
+
+- **Day 04:** Finally fixed my spelling :L. It took me way too long to figure out why string comparison wasn't working because well TS wasn't yelling at me as it usually does. Ended up reducing my solutions by size after solve just a little
