feat: :sparkles: Added a learnt heading

--- a/src/2022/2022.md
+++ b/src/2022/2022.md
@@ -7,3 +7,7 @@
 - **Day 03:** Was pretty slow today because I wanted to do the entirety of part 1 using only array modifiers (and I succeeded). I enjoy days that let me use RegEx, even though it is slow it's a fun puzzle.
 
 - **Day 04:** Finally fixed my spelling :L. It took me way too long to figure out why string comparison wasn't working because well TS wasn't yelling at me as it usually does. Ended up reducing my solutions by size after solve just a little
+
+## Learnt
+Late addition but here are the things I have learnt this year: 
+ - You can convert to numbers by using `.map(Number)` instead of `map(v => +v)`
