feat: :sparkles: Day 05 (and some readme)

--- a/src/2022/2022.md
+++ b/src/2022/2022.md
@@ -6,8 +6,31 @@
 
 - **Day 03:** Was pretty slow today because I wanted to do the entirety of part 1 using only array modifiers (and I succeeded). I enjoy days that let me use RegEx, even though it is slow it's a fun puzzle.
 
-- **Day 04:** Finally fixed my spelling :L. It took me way too long to figure out why string comparison wasn't working because well TS wasn't yelling at me as it usually does. Ended up reducing my solutions by size after solve just a little
+- **Day 04:** Finally fixed my spelling :L. It took me way too long to figure out why string comparison wasn't working because well TS wasn't yelling at me as it usually does. Ended up reducing my solutions by size after solve just a little.
+
+- **Day 05:** This day was way more parsing than it was puzzling but nonetheless succeeded. Not really proud of my parsing solution but it is what it is 😔
 
 ## Learnt
 Late addition but here are the things I have learnt this year: 
  - You can convert to numbers by using `.map(Number)` instead of `map(v => +v)`
+ <details>
+ <summary>Code snippet</summary>
+
+ ```ts
+ const numbers = ["1","2","3"].map(Number);
+ // => [1, 2, 3]
+ ```
+ </details>
+
+ - A cheeky way to split a string into equal parts is to use regex capture groups
+  <details>
+ <summary>Code snippet</summary>
+
+ ```ts
+ const string = "I like cats!"
+ const length = 4;
+ const matcher = new RegExp(`.{${length}}`, "g");
+ const splitString = string.match(matcher);
+ // => ["I li", "ke c", "ats!"]
+ ```
+ </details>
