feat: :sparkles: day 06 :D

--- a/src/2022/2022.md
+++ b/src/2022/2022.md
@@ -10,6 +10,8 @@
 
 - **Day 05:** This day was way more parsing than it was puzzling but nonetheless succeeded. Not really proud of my parsing solution but it is what it is 😔
 
+- **Day 06:** One of the easier days so far, but nonetheless enjoyable. Had to perform under stress as all my private leaderboard friends were online as well (still managed to get a #1 :D)
+
 ## Learnt
 Late addition but here are the things I have learnt this year: 
  - You can convert to numbers by using `.map(Number)` instead of `map(v => +v)`
