feat: :sparkles: Day 07 >:(

--- a/src/2022/2022.md
+++ b/src/2022/2022.md
@@ -12,6 +12,8 @@
 
 - **Day 06:** One of the easier days so far, but nonetheless enjoyable. Had to perform under stress as all my private leaderboard friends were online as well (still managed to get a #1 :D)
 
+- **Day 08:** This day has posed the most problems for me. Biggest issue was that all my solutions gave the correct answer for the test case. Not feeling too bad about my final code but the time is a bit shameful 😓
+
 ## Learnt
 Late addition but here are the things I have learnt this year: 
  - You can convert to numbers by using `.map(Number)` instead of `map(v => +v)`
