refactor: :recycle: rewrote performance measuring code

--- a/src/2022/2022.md
+++ b/src/2022/2022.md
@@ -38,3 +38,7 @@ Late addition but here are the things I have learnt this year:
  // => ["I li", "ke c", "ats!"]
  ```
  </details>
+
+- V8 optimises pieces of code when they're executed a lot. These pieces are also known as "hot code". Source: [logrocket.com][optimising]
+
+[optimising]:(https://blog.logrocket.com/how-javascript-works-optimizing-the-v8-compiler-for-efficiency/)
