feat: :sparkles: day 09 (:

--- a/src/2022/2022.md
+++ b/src/2022/2022.md
@@ -16,6 +16,8 @@
 
 - **Day 08:** Grids 😬
 
+- **Day 09:** Didn't wake up early today because I really needed my sleep. Problem was alright. I had some stupid mistakes but got them both first try nonetheless.
+
 ## Learnt
 Late addition but here are the things I have learnt this year: 
  - You can convert to numbers by using `.map(Number)` instead of `map(v => +v)`
@@ -42,5 +44,7 @@ Late addition but here are the things I have learnt this year:
  </details>
 
 - V8 optimises pieces of code when they're executed a lot. These pieces are also known as "hot code". Source: [logrocket.com][optimising]
+
+- JavaScript has a `Math.sqrt(2)` constant: `Math.SQRT2`
 
 [optimising]:(https://blog.logrocket.com/how-javascript-works-optimizing-the-v8-compiler-for-efficiency/)
