feat: :sparkles: day 10

--- a/src/2022/2022.md
+++ b/src/2022/2022.md
@@ -18,6 +18,8 @@
 
 - **Day 09:** Didn't wake up early today because I really needed my sleep. Problem was alright. I had some stupid mistakes but got them both first try nonetheless.
 
+- **Day 10:** Honestly quite a fun day even though it took me way too long to realise I was using `every` instead of `some` 😅
+
 ## Learnt
 Late addition but here are the things I have learnt this year: 
  - You can convert to numbers by using `.map(Number)` instead of `map(v => +v)`
