--- a/src/2022/2022.md
+++ b/src/2022/2022.md
@@ -20,6 +20,8 @@
 
 - **Day 10:** Honestly quite a fun day even though it took me way too long to realise I was using `every` instead of `some` 😅
 
+- **Day 11:** Part 1 was pretty easy, unlike part 2 which required me to know obscure prime maths modulo rules >:(  I must admit I didn't come up with the prime factorization myself hence the variable `magicNumberIFoundOnline`, but I do get how it works.
+
 ## Learnt
 Late addition but here are the things I have learnt this year: 
  - You can convert to numbers by using `.map(Number)` instead of `map(v => +v)`
