--- a/src/2022/2022.md
+++ b/src/2022/2022.md
@@ -22,8 +22,10 @@
 
 - **Day 11:** Part 1 was pretty easy, unlike part 2 which required me to know obscure prime maths modulo rules >:(  I must admit I didn't come up with the prime factorization myself hence the variable `magicNumberIFoundOnline`, but I do get how it works.
 
+- **Day 12:** What a day. I learnt quite a lot about graphs and nodes today most of it being BFS. I ended up just translating the [wikipedia pseudocode][pseudocode] to TypeScript. A nifty thing I thought of today was using console.table to visualise XY maps which made it really easy to see if my parsing succeeded or not. Overall a pretty interesting day even if it was just implement an existing algorithm :)
+
 ## Learnt
-Late addition but here are the things I have learnt this year: 
+Late addition but here are the things I have learnt (or figured out myself) this year: 
  - You can convert to numbers by using `.map(Number)` instead of `map(v => +v)`
  <details>
  <summary>Code snippet</summary>
@@ -51,4 +53,12 @@ Late addition but here are the things I have learnt this year:
 
 - JavaScript has a `Math.sqrt(2)` constant: `Math.SQRT2`
 
+- You can easily visualise grids by using `console.table()`
+<details>
+<summary>Screenshot</summary>
+
+![screenshot](https://cdn.discordapp.com/attachments/1047336632879161394/1051927294253482014/image.png)
+</detail>
+
 [optimising]:(https://blog.logrocket.com/how-javascript-works-optimizing-the-v8-compiler-for-efficiency/)
+[pseudocode]:(https://en.wikipedia.org/wiki/Breadth-first_search#Pseudocode)
