feat: :sparkles: day 13

--- a/src/2022/2022.md
+++ b/src/2022/2022.md
@@ -24,6 +24,8 @@
 
 - **Day 12:** What a day. I learnt quite a lot about graphs and nodes today most of it being BFS. I ended up just translating the [wikipedia pseudocode][pseudocode] to TypeScript. A nifty thing I thought of today was using console.table to visualise XY maps which made it really easy to see if my parsing succeeded or not. Overall a pretty interesting day even if it was just implement an existing algorithm :)
 
+- **Day 13:** Pretty doable day (unless you're solving at 6am 😓). Kinda nice my compare function fitted right in with the built-in `.sort()` function. Haven't got much to say really ¯\\\_(ツ)\_/¯
+
 ## Learnt
 Late addition but here are the things I have learnt (or figured out myself) this year: 
  - You can convert to numbers by using `.map(Number)` instead of `map(v => +v)`
