feat: :sparkles: day 14 :D

--- a/src/2022/2022.md
+++ b/src/2022/2022.md
@@ -26,6 +26,8 @@
 
 - **Day 13:** Pretty doable day (unless you're solving at 6am 😓). Kinda nice my compare function fitted right in with the built-in `.sort()` function. Haven't got much to say really ¯\\\_(ツ)\_/¯
 
+- **Day 14:** Really liked today, probably one of my favourite days so far (probably because I didn't use a grid). 
+
 ## Learnt
 Late addition but here are the things I have learnt (or figured out myself) this year: 
  - You can convert to numbers by using `.map(Number)` instead of `map(v => +v)`
