feat: :sparkles: day 2

--- a/src/2016/2016.md
+++ b/src/2016/2016.md
@@ -4,3 +4,4 @@ Using this to get back into programming, and I am bored :)
 
 - **Day 01:** Getting back to logical thinking is challenging, but fun. Forgot that taxicab geometry is only positive.
 
+- **Day 02:** The 2nd keypad was unexpected, but just pasting it in works 👍
