feat: :sparkles: day 3, array modifiers ♥

--- a/src/2016/2016.md
+++ b/src/2016/2016.md
@@ -5,3 +5,5 @@ Using this to get back into programming, and I am bored :)
 - **Day 01:** Getting back to logical thinking is challenging, but fun. Forgot that taxicab geometry is only positive.
 
 - **Day 02:** The 2nd keypad was unexpected, but just pasting it in works 👍
+
+- **Day 03:** I love using nothing but array modifiers, actually quite proud of how I did part 2. I think I haven't used this many different array modifiers at once before.
