feat: :sparkles: day 4

--- a/src/2016/2016.md
+++ b/src/2016/2016.md
@@ -7,3 +7,5 @@ Using this to get back into programming, and I am bored :)
 - **Day 02:** The 2nd keypad was unexpected, but just pasting it in works 👍
 
 - **Day 03:** I love using nothing but array modifiers, actually quite proud of how I did part 2. I think I haven't used this many different array modifiers at once before.
+
+- **Day 04:** Part 1 was quite annoying, because the feature I wanted to use is too new for NodeJS. Part 2 was a breeze, didn't expect it
