--- a/src/2016/2016.md
+++ b/src/2016/2016.md
@@ -9,3 +9,5 @@ Using this to get back into programming, and I am bored :)
 - **Day 03:** I love using nothing but array modifiers, actually quite proud of how I did part 2. I think I haven't used this many different array modifiers at once before.
 
 - **Day 04:** Part 1 was quite annoying, because the feature I wanted to use is too new for NodeJS. Part 2 was a breeze, didn't expect it
+
+- **Day 05:** Almost the exact same as day 4 2015. Boring day because there is no smart way to do it...
