feat: :sparkles: array modifiers FTW

--- a/src/2016/2016.md
+++ b/src/2016/2016.md
@@ -11,3 +11,5 @@ Using this to get back into programming, and I am bored :)
 - **Day 04:** Part 1 was quite annoying, because the feature I wanted to use is too new for NodeJS. Part 2 was a breeze, didn't expect it
 
 - **Day 05:** Almost the exact same as day 4 2015. Boring day because there is no smart way to do it...
+
+- **Day 06:** I am too good at array modifiers. Part 2 was incredibly easy as I only had to change what element of an array I wanted to check :D
