--- a/src/2016/2016.md
+++ b/src/2016/2016.md
@@ -13,3 +13,17 @@ Using this to get back into programming, and I am bored :)
 - **Day 05:** Almost the exact same as day 4 2015. Boring day because there is no smart way to do it...
 
 - **Day 06:** I am too good at array modifiers. Part 2 was incredibly easy as I only had to change what element of an array I wanted to check :D
+
+- **Day 07:** Array modifiers 🙏. Part 2 was challenging because I had to get an overlapping regex.
+
+## Learnt
+Late addition but here are the things I have learnt (or figured out myself) this year: 
+ - To run code in a reduce function without brackets, use ternary statements (makes sense when viewing example)
+ <details>
+ <summary>Code snippet</summary>
+
+ ```ts
+ .reduce((a, b) => (a[b] = (a[b] || 0) + 1) ? a : a, {})
+ // => Here the code is executed before just returning a
+ ```
+ </details>
