feat: :sparkles: day 8

--- a/src/2016/2016.md
+++ b/src/2016/2016.md
@@ -16,6 +16,8 @@ Using this to get back into programming, and I am bored :)
 
 - **Day 07:** Array modifiers 🙏. Part 2 was challenging because I had to get an overlapping regex.
 
+- **Day 08:** Part 2 was to just uncomment my debugging line, visualisation FTW.
+
 ## Learnt
 Late addition but here are the things I have learnt (or figured out myself) this year: 
  - To run code in a reduce function without brackets, use ternary statements (makes sense when viewing example)
