feat: :sparkles: day 9

--- a/src/2016/2016.md
+++ b/src/2016/2016.md
@@ -18,6 +18,8 @@ Using this to get back into programming, and I am bored :)
 
 - **Day 08:** Part 2 was to just uncomment my debugging line, visualisation FTW.
 
+- **Day 09:** Part 2 took me longer than I'd like to admit. Was being stubborn and forgot about recursion 😅
+
 ## Learnt
 Late addition but here are the things I have learnt (or figured out myself) this year: 
  - To run code in a reduce function without brackets, use ternary statements (makes sense when viewing example)
