feat: :sparkles: day 10

--- a/src/2016/2016.md
+++ b/src/2016/2016.md
@@ -20,6 +20,8 @@ Using this to get back into programming, and I am bored :)
 
 - **Day 09:** Part 2 took me longer than I'd like to admit. Was being stubborn and forgot about recursion 😅
 
+- **Day 10:** Pretty straightforward, biggest struggle was properly using objects. Part 2 wording messed me up because I assumed outputs could have more than 1 chip.
+
 ## Learnt
 Late addition but here are the things I have learnt (or figured out myself) this year: 
  - To run code in a reduce function without brackets, use ternary statements (makes sense when viewing example)
