feat: :sparkles: day 22 🎉🥳

--- a/src/2015/2015.md
+++ b/src/2015/2015.md
@@ -44,6 +44,8 @@ Writing this it is october 2022, im solving this in october because i'm kinda bo
 
 - **Day 21:** Part 1 was doable. It took me longest trying to figure out how to get the ring combinations. Part 2 put me through living hell because I had a typo in the store. I had the `Armour +3` ring set to `+2`. A redditor ended up pointing it out to me, thanks `u/semi225599`! 
 
+- **Day 22:** Decided to give day 22 another shot after a year, and it was pretty easy. Still took me long enough because I flipped `player.shield - bossDMG`. Part 2 was just adding two lines, and fixing a bug introduced by a friend...
+
 - **Day 23:** Depending on when you are reading this, you may notice that day 22 is not here. That is because I got fed up with it and decided to move on. Day 23 was actually quite easy, part 2 wasn't even a challenge.
 
 - **Day 24:** Took a small break and attemtped to write my own smarter combinations algorithm. Lesson learnt: don't reinvent the wheel. Part 2 was a joke though :L
