feat: :sparkles: 2015 finished!

--- a/src/2015/2015.md
+++ b/src/2015/2015.md
@@ -49,3 +49,5 @@ Writing this it is october 2022, im solving this in october because i'm kinda bo
 - **Day 23:** Depending on when you are reading this, you may notice that day 22 is not here. That is because I got fed up with it and decided to move on. Day 23 was actually quite easy, part 2 wasn't even a challenge.
 
 - **Day 24:** Took a small break and attemtped to write my own smarter combinations algorithm. Lesson learnt: don't reinvent the wheel. Part 2 was a joke though :L
+
+- **Day 25:** I have no clue what my code is doing because I solved this a year ago and I am not even sure if I came up with this myself 😅
