feat: :sparkles: day 2 :D

--- a/src/2023/2023.md
+++ b/src/2023/2023.md
@@ -4,6 +4,8 @@ Back again.
 
 - **Day 01:** Started off strong with **#268** on global leaderboard for part 1, pretty proud of that. Part 2 was a different story, I didn't realise overlapping would be a thing (oneight = one, eight). Luckily I had overlapping regex code from 2016 which I did a week ago. 
 
+- **Day 02:** No leaderboard today, because I cannot read. I tried a lot of incorrect things for part 1, before bothering to read the question. Part 2 was quite easy, for sure when compared to part 2 of day 1.
+
 ## Learnt
 
  - How to add to prototypes using JavaScript (and use them globally)
