feat: :sparkles: day 3

--- a/src/2023/2023.md
+++ b/src/2023/2023.md
@@ -6,6 +6,8 @@ Back again.
 
 - **Day 02:** No leaderboard today, because I cannot read. I tried a lot of incorrect things for part 1, before bothering to read the question. Part 2 was quite easy, for sure when compared to part 2 of day 1.
 
+- **Day 03:** Grids aren't my thing. P1 took me longer than I'd like to admit, and had to postpone part 2 till later because of exam preparation and gym. Got to use my custom methods `.sum()` and `.product()` :D
+
 ## Learnt
 
  - How to add to prototypes using JavaScript (and use them globally)
