--- a/src/2023/2023.md
+++ b/src/2023/2023.md
@@ -8,6 +8,8 @@ Back again.
 
 - **Day 03:** Grids aren't my thing. P1 took me longer than I'd like to admit, and had to postpone part 2 till later because of exam preparation and gym. Got to use my custom methods `.sum()` and `.product()` :D
 
+- **Day 04:** Not a huge fan of today, but that's because TS and me didn't agree on things. My parsing was correct, but TS kept giving errors, so I just told it to shut up and deal with it (aka @ts-ignore).
+
 ## Learnt
 
  - How to add to prototypes using JavaScript (and use them globally)
