feat: :sparkles: day 6

--- a/src/2023/2023.md
+++ b/src/2023/2023.md
@@ -10,6 +10,10 @@ Back again.
 
 - **Day 04:** Not a huge fan of today, but that's because TS and me didn't agree on things. My parsing was correct, but TS kept giving errors, so I just told it to shut up and deal with it (aka @ts-ignore).
 
+- **Day 05:** Part 1 was pretty doable, just a lot of reading. 
+
+- **Day 06:** Difficulty went way down with this one. Didn't feel like submitting a brute force solution so I used maths 👍
+
 ## Learnt
 
  - How to add to prototypes using JavaScript (and use them globally)
