feat: :sparkles: day 7 :D

--- a/src/2023/2023.md
+++ b/src/2023/2023.md
@@ -14,6 +14,8 @@ Back again.
 
 - **Day 06:** Difficulty went way down with this one. Didn't feel like submitting a brute force solution so I used maths 👍
 
+- **Day 07:** Poker! Well, camel cards. As an avid poker player I enjoyed this day. This has so far been the day with the most lines of code for me. I was expecting part 2 to make ranking more difficult (using highcards and such) but the wildcard was a more fun addition. (Also, how would you play this? Do you bid after seeing your hand and the other player gets a chance to outbid you or to lay down their hand? Sounds a bit like five card draw)
+
 ## Learnt
 
  - How to add to prototypes using JavaScript (and use them globally)
