feat: :sparkles: day 8

--- a/src/2023/2023.md
+++ b/src/2023/2023.md
@@ -16,6 +16,8 @@ Back again.
 
 - **Day 07:** Poker! Well, camel cards. As an avid poker player I enjoyed this day. This has so far been the day with the most lines of code for me. I was expecting part 2 to make ranking more difficult (using highcards and such) but the wildcard was a more fun addition. (Also, how would you play this? Do you bid after seeing your hand and the other player gets a chance to outbid you or to lay down their hand? Sounds a bit like five card draw)
 
+- **Day 08:** Pretty fun day, part 1 was easy and part 2 required some thinking but I realised I had to use LCM by myself which made me feel smart.
+
 ## Learnt
 
  - How to add to prototypes using JavaScript (and use them globally)
