feat: :sparkles: day 9 🚄

--- a/src/2023/2023.md
+++ b/src/2023/2023.md
@@ -18,6 +18,8 @@ Back again.
 
 - **Day 08:** Pretty fun day, part 1 was easy and part 2 required some thinking but I realised I had to use LCM by myself which made me feel smart.
 
+- **Day 09:** Today was easy if you just followed the instructions, which I did not. I spent more than 2 hours trying to find a quicker, memory friendly way to solve this. Programmed this in the train btw.
+
 ## Learnt
 
  - How to add to prototypes using JavaScript (and use them globally)
