feat: :sparkles: day 11

--- a/src/2023/2023.md
+++ b/src/2023/2023.md
@@ -20,6 +20,8 @@ Back again.
 
 - **Day 09:** Today was easy if you just followed the instructions, which I did not. I spent more than 2 hours trying to find a quicker, memory friendly way to solve this. Programmed this in the train btw.
 
+- **Day 11:** Had to do some fixing for p2, but quite doable. I'm sure there is a faster way of doing this but eh ¯\\_(ツ)\_/¯
+
 ## Learnt
 
  - How to add to prototypes using JavaScript (and use them globally)
